--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "redux-form": "^8.3.10",
     "redux-thunk": "^2.4.2",
     "reselect": "^4.1.8",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@babel/plugin-proposal-private-property-in-object": "^7.11.4"
   },
   "scripts": {
     "start": "react-scripts start",
